Changing the ping-test to make playbook file contain a set of plays

--- a/playbooks/ping-test/ping-test.yaml
+++ b/playbooks/ping-test/ping-test.yaml
@@ -1,6 +1,6 @@
 -
-  name: Test connectivity with the target system ( ansible_target1)
-  host: webserver
+  name: Test connectivity with the target system
+  hosts: webserver
   tasks:
     - name: Ping Test
       ping:
