--- a/playbooks/create-directory.yaml
+++ b/playbooks/create-directory.yaml
@@ -3,5 +3,6 @@
   hosts: webserver
   tasks:
     - name: Ensure a configuration directory exists in $HOME/app
-      file: $HOME/app/conf
-      state: directory
+      file:
+        path: $HOME/app/conf
+        state: directory
