Commit playbook to add a new directory in /home/app/conf of the host systems

--- a/playbooks/create-directory.yaml
+++ b/playbooks/create-directory.yaml
@@ -6,3 +6,12 @@
       file:
         path: $HOME/app/conf
         state: directory
+
+    - name: create multiple directory in the $HOME
+      file:
+        path: "$HOME/{{item}}"
+        state: directory
+      loop:
+        - app/conf
+        - app/source
+        - app/meta-inf
