Commit playbook to add a new directory in /home/app/conf of the host systems

--- a/playbooks/create-directory.yaml
+++ b/playbooks/create-directory.yaml
@@ -15,3 +15,11 @@
         - app/conf
         - app/source
         - app/meta-inf
+
+    -name : remove multiple directories created in the step above
+      file:
+        path: "$HOME/{{item}}"
+        state: absent
+      loop:
+        - app/source
+        - app/meta-inf
