--- a/playbooks/replace-token.yaml
+++ b/playbooks/replace-token.yaml
@@ -38,5 +38,5 @@
         regexp: "{{item.regex}}"
         replace: "{{item.replace}}"
       with_items:
-        - {path: 'root/app/conf/app-conf1.xml', regex: '10999', replace: 'GaneshJi'}
-        - {path: 'root/app/conf/app-conf2.xml', regex: '10999', replace: 'GaneshJiBhagwan'}
+        - {path: '/root/app/conf/app-conf1.xml', regex: '10999', replace: 'GaneshJi'}
+        - {path: '/root/app/conf/app-conf2.xml', regex: '10999', replace: 'GaneshJiBhagwan'}
