--- a/playbooks/replace-token.yaml
+++ b/playbooks/replace-token.yaml
@@ -40,3 +40,7 @@
       with_items:
         - {path: '/$HOME/app/conf/app-conf1.xml', regex: '(?<=\@)(.*?)(?=\@)', replace: 'GaneshJi'}
         - {path: '/$HOME/app/conf/app-conf2.xml', regex: '(?<=\@)(.*?)(?=\@)', replace: 'GaneshJiBhagwan'}
+
+    - name: Read the token in the configuration file
+      set_fact:
+      myvalue: "{{ results.stdout | regex_search(regexp,'\\1') }}"
