--- a/playbooks/read-token.yaml
+++ b/playbooks/read-token.yaml
@@ -5,7 +5,7 @@
     - shell: echo 'vault-option name="KEYSTORE_PASSWORD" value="MASK-5dOaAVafCSd" value="One more time" value="MASK-ED-123-LT"'
       register: results
     - set_fact:
-        myvalue: "{{ results.stdout | regex_search(regexp) }}"
+        myvalue: "{{ results.stdout | regex_search('(value=\"([^"]+))') }}"
       vars:
         regexp: 'value=\"([^"]+)'
     - debug:
