--- a/playbooks/read-token.yaml
+++ b/playbooks/read-token.yaml
@@ -1,5 +1,5 @@
 -
-  name: Create a directory app-conf in the $HOME/app/conf directory
+  name: Read some value using regular expression filter
   hosts: webserver
   tasks:
     - shell: echo 'vault-option name="KEYSTORE_PASSWORD" value="MASK-5dOaAVafCSd" value="One more time" value="MASK-ED-123-LT"'
