--- a/playbooks/read-token.yaml
+++ b/playbooks/read-token.yaml
@@ -1,11 +1,13 @@
 -
-  name: Read some value using regular expression filter
+  name: Create a directory app-conf in the $HOME/app/conf directory
   hosts: webserver
   tasks:
     - shell: echo 'vault-option name="KEYSTORE_PASSWORD" value="MASK-5dOaAVafCSd" value="One more time" value="MASK-ED-123-LT"'
       register: results
+    - debug:
+        var: results
     - set_fact:
-        myvalue: "{{ results.stdout | regex_search('(value=\"([^"]+))') }}"
+        myvalue: "{{ results.stdout | regex_search('(regexp)')}}"
       vars:
         regexp: 'value=\"([^"]+)'
     - debug:
