--- a/playbooks/read-token.yaml
+++ b/playbooks/read-token.yaml
@@ -7,7 +7,7 @@
     - debug:
         var: results
     - set_fact:
-        myvalue: "{{ 'foobar food foo foosball football' | regex_search('(foo)') }}"
+        myvalue: "{{ 'foobar food foosball football' | regex_search('(foo)') }}"
       vars:
         regexp: 'value=\"([^"]+)'
     - debug:
