--- a/playbooks/read-file.yaml
+++ b/playbooks/read-file.yaml
@@ -7,9 +7,15 @@
         src: /ansible-inventory-check/playbooks/purchaseOrder.xml
         dest: $HOME/app/conf/purchaseOrder.xml
 
-    - name: display multiple file contents
-      debug:
-        var=item
-      with_file:
-        - "/ansible-inventory-check/playbooks/purchaseOrder.xml"
+    - name: importing the file contents to variable
+      slurp:
+        src: $HOME/app/conf/purchaseOrder.xml
+      register: idb_endpoint_b64
+      become: true
+
+    - set_fact:
+        idb_endpoint: "{{ idb_endpoint_b64.content | b64decode }}"
+
+    - debug:
+        var: idb_endpoint
 
