--- a/playbooks/read-file.yaml
+++ b/playbooks/read-file.yaml
@@ -19,3 +19,6 @@
     - debug:
         var: idb_endpoint
 
+    - debug:
+        msg="user.name is {{ lookup('ini', 'user.name type=properties file=$HOME/app/conf/token.properties') }}"
+
