--- a/playbooks/read-file.yaml
+++ b/playbooks/read-file.yaml
@@ -4,9 +4,13 @@
   tasks:
     - name: Copy File to the target system
       copy:
-        src: /ansible-inventory-check/playbooks/purchaseOrder.xml
-        dest: $HOME/app/conf/purchaseOrder.xml
-
+        src: "/ansible-inventory-check/conf/{{item}}"
+        dest: "$HOME/app/conf/{{item}}"
+      loop:
+        - purchaseOrder.xml
+        - app-conf1.xml
+        - app-conf2.xml
+        - token.properties
     - name: importing the file contents to variable
       slurp:
         src: $HOME/app/conf/purchaseOrder.xml
