--- a/playbooks/read-file.yaml
+++ b/playbooks/read-file.yaml
@@ -24,5 +24,5 @@
         var: idb_endpoint
 
     - debug:
-        msg="user.name is {{ lookup('ini', 'user.name type=properties file=$HOME/app/conf/token.properties') }}"
+        msg="user.name is {{ lookup('ini', 'user.name type=properties file=/root/app/conf/token.properties') }}"
 
