--- a/playbooks/read-app-token.yaml
+++ b/playbooks/read-app-token.yaml
@@ -33,4 +33,11 @@
     - debug:
         var: myvalue
 
+    - name: Replace the token in the configuration files
+      replace:
+        path: $HOME/app/conf/purchaseOrder.xml
+        regexp: '(?<=\@)(.*?)(?=\@)'
+        replace: "{{item}}"
+      loop: "{{myvalue}}"
+
 
