--- a/playbooks/read-app-token.yaml
+++ b/playbooks/read-app-token.yaml
@@ -44,7 +44,7 @@
         var: myvalue
 
     - debug:
-        var: "{{ lookup('ini', '{{item}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') }}"
+        var: "{{ lookup('ini', 'user.name type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') }}"
       loop: "{{myvalue}}"
 
     - name: Replace the token in the configuration files
