--- a/playbooks/read-app-token.yaml
+++ b/playbooks/read-app-token.yaml
@@ -46,11 +46,16 @@
     - debug:
         msg="{{ lookup('ini', 'user.name type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') }}"
       loop: "{{myvalue}}"
+      register: myresult
+
+    - debug:
+        var : myresult
 
     - name: Replace the token in the configuration files
       replace:
         path: /home/LDC/app/conf/purchaseOrder.xml
         regexp: '(?<=\@)(.*?)(?=\@)'
+        msg=
         replace: "{{ lookup('ini', '{{item}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') }}"
       loop: "{{myvalue}}"
 
