--- a/playbooks/read-app-token.yaml
+++ b/playbooks/read-app-token.yaml
@@ -55,7 +55,8 @@
       replace:
         path: /home/LDC/app/conf/purchaseOrder.xml
         regexp: '(?<=\@)(.*?)(?=\@)'
-        replace: "{{ lookup('ini', '{{item}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') }}"
+        replace: 'alpha'
+        #replace: "{{ lookup('ini', '{{item}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') }}"
       loop: "{{myvalue}}"
 
 
