--- a/playbooks/replace-token.yaml
+++ b/playbooks/replace-token.yaml
@@ -39,9 +39,9 @@
         regexp: "{{item.regex}}"
         replace: "{{item.replace}}"
       with_items:
-        - {path: '/$HOME/app/conf/app-conf1.xml', regex: '(?<=\@)(.*?)(?=\@)', replace: 'GaneshJi'}
-        - {path: '/$HOME/app/conf/app-conf2.xml', regex: '(?<=\@)(.*?)(?=\@)', replace: 'GaneshJiBhagwan'}
-        - {path: '/$HOME/app/conf/purchaseOrder.xml', regex: '(?<=\@)(.*?)(?=\@)', replace: 'GaneshJiBhagwan'}
+        - {path: '/home/LDC/app/conf/app-conf1.xml', regex: '(?<=\@)(.*?)(?=\@)', replace: 'GaneshJi'}
+        - {path: '/home/LDC/app/conf/app-conf2.xml', regex: '(?<=\@)(.*?)(?=\@)', replace: 'GaneshJiBhagwan'}
+        - {path: '/home/LDC/app/conf/purchaseOrder.xml', regex: '(?<=\@)(.*?)(?=\@)', replace: 'GaneshJiBhagwan'}
 
     #- name: Read the token in the configuration file
     #  set_fact:
