--- a/playbooks/read-app-token.yaml
+++ b/playbooks/read-app-token.yaml
@@ -55,8 +55,8 @@
       replace:
         path: /home/LDC/app/conf/purchaseOrder.xml
         regexp: '(?<=\@)(.*?)(?=\@)'
-        replace: 'GaneshJi'
-        #replace: "{{ lookup('ini', '{{item}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') }}"
-      #with_items: "{{myvalue}}"
+        #replace: 'GaneshJi'
+        replace: "{{ lookup('ini', '{{item}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') }}"
+      with_items: "{{myvalue}}"
 
 
