--- a/playbooks/read-app-token.yaml
+++ b/playbooks/read-app-token.yaml
@@ -54,9 +54,9 @@
     - name: Replace the token in the configuration files
       replace:
         path: /home/LDC/app/conf/purchaseOrder.xml
-        regexp: '(?<=\@)(.{{item}})(?=\@)'
+        regexp: '{{item.results.item}}'
         #replace: 'GaneshJi'
-        replace: "{{ lookup('ini', '{{item}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') }}"
-      loop: "{{myvalue}}"
+        replace: "{{ lookup('ini', '{{item.results.item}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') }}"
+      with_items: "{{myresult}}"
 
 
