--- a/playbooks/read-app-token.yaml
+++ b/playbooks/read-app-token.yaml
@@ -51,12 +51,18 @@
     - debug:
         var : myresult
 
+    - set_fact:
+        resultingToken: "{{myresult.results}}"
+
+    - debug:
+        var: resultingToken
+
     - name: Replace the token in the configuration files
       replace:
         path: /home/LDC/app/conf/purchaseOrder.xml
-        regexp: '{{item.results.item}}'
+        regexp: '{{item.item}}'
         #replace: 'GaneshJi'
-        replace: "{{ lookup('ini', '{{item.results.item}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') }}"
-      with_items: "{{myresult}}"
+        replace: "{{ lookup('ini', '{{item.item}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') }}"
+      with_items: "{{resultingToken}}"
 
 
