--- a/playbooks/read-app-token.yaml
+++ b/playbooks/read-app-token.yaml
@@ -61,9 +61,8 @@
     - template:
         src: /home/LDC/ansible-inventory-check/conf/PO.j2
         dest: /home/LDC/app/conf/PO.xml
-      loop: "{{resultingToken}}"
-      loop_control:
-        loop_var: token
+      loop: "{{myresult}}"
+
 
     - name: Replace the token in the configuration files
       replace:
