--- a/playbooks/read-app-token.yaml
+++ b/playbooks/read-app-token.yaml
@@ -71,7 +71,7 @@
         path: /home/LDC/app/conf/purchaseOrder.xml
         regexp: '@{{item.item}}@'
         #replace: 'GaneshJi'
-        replace: "{{ lookup('ini', '{{item.item}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') }}"
+        replace: "{{{{ lookup('ini', '{{item.item}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') }}}}"
       with_items: "{{resultingToken}}"
 
 
