--- a/playbooks/read-app-token.yaml
+++ b/playbooks/read-app-token.yaml
@@ -2,7 +2,7 @@
   name: Read a token using regular expression
   hosts: webserver
   vars:
-    content: "{{lookup('file','/home/LDC/ansible-inventory-check/conf/token.properties'}}"
+    content: "{{lookup('file','/home/LDC/ansible-inventory-check/conf/token.properties')}}"
   tasks:
     - name: Ensure a configuration directory exists in $HOME/app
       file:
