--- a/playbooks/read-app-token.yaml
+++ b/playbooks/read-app-token.yaml
@@ -62,7 +62,7 @@
 
 
     - debug:
-        message="content is {{content}}"
+        msg="content is {{content}}"
 
     - template:
         src: /home/LDC/ansible-inventory-check/conf/PO.j2
