--- a/playbooks/build-conf.yaml
+++ b/playbooks/build-conf.yaml
@@ -9,7 +9,7 @@
         state: directory
 
     - name: Loop through the tasks
-      include_task: read-replace-app-token.yaml
+      include_tasks: read-replace-app-token.yaml
       with_items:
         - {file: app-conf1, ext: xml}
         - {file: app-conf2, ext: xml}
