--- a/playbooks/read-replace-app-token.yaml
+++ b/playbooks/read-replace-app-token.yaml
@@ -38,11 +38,13 @@
 
     - name: Replace the token in the configuration files
       replace:
-        path: /home/LDC/app/conf/purchaseOrder.xml
-        regexp: '{{item.item}}'
+        path: /home/LDC/app/conf/{{file.file}}.{{file.ext}}
+        regexp: '{{tokens.item}}'
         #replace: 'GaneshJi'
         #replace: "{{'{{item.item}}'}}"
-        replace: "{{{{ lookup('ini', '{{item.item}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') }}}}"
+        replace: "{{{{ lookup('ini', '{{tokens.item}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') }}}}"
       with_items: "{{resultingToken}}"
+      loop_control:
+        loop_var: tokens
 
 
