Adding the changes

--- a/conf/token.properties
+++ b/conf/token.properties
@@ -4,3 +4,6 @@ user.name=chesharm
 deploy.host.name.billing=12128
 deploy.host.name=128239
 Shipping=Bipping
+1999-10-20=HelloWorld
+Billing=Killing
+99504=Pantaloons
