--- a/playbooks/read-replace-app-token.yaml
+++ b/playbooks/read-replace-app-token.yaml
@@ -1,12 +1,12 @@
 
     - name: Copy configuration xml files to the target system
       copy:
-        src: /home/LDC/ansible-inventory-check/conf/{{file.file}}.{{file.ext}}
-        dest: /home/LDC/app/conf/{{file.file}}.{{file.ext}}
+        src: /home/LDC/ansible-inventory-check/conf/{{file}}
+        dest: /home/LDC/app/conf/{{file}}
 
     - name: importing the file contents to variable
       slurp:
-        src: /home/LDC/app/conf/{{file.file}}.{{file.ext}}
+        src: /home/LDC/app/conf/{{file}}
       register: idb_endpoint_b64
 
     - name: Decoding the content from base 64 to normal text
