--- a/playbooks/read-replace-app-token.yaml
+++ b/playbooks/read-replace-app-token.yaml
@@ -1,40 +1,42 @@
 
-    - name: Copy configuration xml files to the target system
+    - name: Copy application configuration files to the target system
       copy:
         src: /home/LDC/ansible-inventory-check/conf/{{file}}
         dest: /home/LDC/app/conf/{{file}}
 
-    - name: importing the file contents to variable
+    - name: Reading the file contents on the target machines to a variable
       slurp:
         src: /home/LDC/app/conf/{{file}}
-      register: idb_endpoint_b64
+      register: fileContent
 
     - name: Decoding the content from base 64 to normal text
       set_fact:
-        idb_endpoint: "{{ idb_endpoint_b64.content | b64decode }}"
+        fileString: "{{ fileContent.content | b64decode }}"
 
-    - name: Print the content on the screen
+    - name: Print the file content on the screen
       debug:
-        var: idb_endpoint
+        var: fileString
 
-    - set_fact:
-        myvalue: "{{ idb_endpoint | regex_findall(regexp)}}"
+    - name: Find the tokens (@----@) in the fileString
+      set_fact:
+        tokenObject: "{{ fileString | regex_findall(regexp)}}"
       vars:
         regexp: '(?<=\@)(.*?)(?=\@)'
 
-    - debug:
-        var: myvalue
+    - name: Print Token Objects
+      debug:
+        var: tokenObject
 
-    - debug:
-        msg="{{ lookup('ini', '{{item}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') }}"
-      loop: "{{myvalue}}"
-      register: myresult
+    #- debug:
+    #    msg="{{ lookup('ini', '{{item}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') }}"
+    #  loop: "{{tokenObject}}"
+    #  register: myresult
 
-    - debug:
-        var : myresult
+    #- debug:
+    #    var : myresult
 
     - set_fact:
-        resultingToken: "{{myresult.results}}"
+        fileTokens : "{{tokenObject.results}}"
 
     - name: Replace the token in the configuration files
       replace:
@@ -43,7 +45,7 @@
         #replace: 'GaneshJi'
         #replace: "{{'{{item.item}}'}}"
         replace: "{{ lookup('ini', '{{tokens.item}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') }}"
-      with_items: "{{resultingToken}}"
+      with_items: "{{fileTokens}}"
       loop_control:
         loop_var: tokens
 
