--- a/playbooks/read-replace-app-token.yaml
+++ b/playbooks/read-replace-app-token.yaml
@@ -36,7 +36,7 @@
     #    var : myresult
 
     - set_fact:
-        fileTokens : "{{tokenObject.results}}"
+        fileTokens : "{{tokenObject}}"
 
     - name: Replace the token in the configuration files
       replace:
