--- a/playbooks/read-replace-app-token.yaml
+++ b/playbooks/read-replace-app-token.yaml
@@ -41,7 +41,7 @@
     - name: Replace the token in the configuration files
       replace:
         path: /home/LDC/app/conf/{{file}}
-        regexp: '{{tokens.item}}'
+        regexp: '{{tokens}}'
         #replace: 'GaneshJi'
         replace: "{{ lookup('ini', '{{tokens}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') }}"
       with_items: "{{fileTokens}}"
