--- a/playbooks/build-conf.yaml
+++ b/playbooks/build-conf.yaml
@@ -15,7 +15,7 @@
 
     - name: Ansible date timestamp example
       debug:
-        var="Replacement started at {{ansible_date_time.epoch}}"
+        msg="Replacement started at {{ansible_date_time.epoch}}"
 
     - name: Loop through the tasks
       include_tasks: read-replace-app-token.yaml
@@ -37,6 +37,6 @@
 
     - name: Ansible date timestamp example
         debug:
-          var="Replacement finsihed at {{ansible_date_time.epoch}}"
+          msg="Replacement finsihed at {{ansible_date_time.epoch}}"
 
 
