--- a/playbooks/read-replace-app-token.yaml
+++ b/playbooks/read-replace-app-token.yaml
@@ -42,6 +42,8 @@
       replace:
         path: /home/LDC/app/conf/{{file}}
         regexp: '{{token}}'
+        after: '@'
+        before: '@'
         #replace: 'GaneshJi'
         replace: "{{ lookup('ini', '{{token}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') }}"
       with_items: "{{tokens}}"
