--- a/conf/token.properties
+++ b/conf/token.properties
@@ -1,9 +1,2 @@
-user.name=chesharm
-99503=12345
-99505=67891
-deploy.host.name.billing=12128
-deploy.host.name=128239
-Shipping=Bipping
-1999-10-20=HelloWorld
-Billing=Killing
-99504=Pantaloons
+deploy.host.billing=RBSCANDOR
+deploy.host.name=RBS
