--- a/playbooks/read-replace-app-token.yaml
+++ b/playbooks/read-replace-app-token.yaml
@@ -28,13 +28,13 @@
       debug:
         var: tokens
 
-    #- debug:
-    #    msg="{{ lookup('ini', '{{item}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') }}"
-    #  loop: "{{tokenObject}}"
-    #  register: myresult
+    - debug:
+        msg="{{ lookup('ini', '{{item}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') }}"
+      loop: "{{tokenObject}}"
+      register: myresult
 
-    #- debug:
-    #    var : myresult
+    - debug:
+        var : myresult
 
     #- set_fact:
     #    fileTokens : "{{tokenObject}}"
