--- a/conf/token.properties
+++ b/conf/token.properties
@@ -1,2 +1,8 @@
-deploy.host.name=RBS
-deploy.host.billing=RBSCANDOR
+user.name=chesharm
+99503=12345
+99505=67891
+deploy.host.billing=12128
+deploy.host.name=128239
+Shipping=Bipping
+1999-10-20=HelloWorld
+Billing=Killing
