--- a/conf/token.properties
+++ b/conf/token.properties
@@ -1,7 +1,7 @@
 user.name=chesharm0
 99504=12345
 99505=67891
-deploy.host.name.billing=12128
+deploy.host.billing=12128
 deploy.host.name=128239
 Shipping=Bipping
 1999-10-20=HelloWorld
