--- a/conf/token.properties
+++ b/conf/token.properties
@@ -1,8 +1,8 @@
 user.name=chesharm0
 99504=12345
 99505=67891
-deploy.host.billing=12128
-deploy.host.name=128239
+deploy.host.billing=Candor Tech Space
+deploy.host.name=www.reservedBank.com
 Shipping=Bipping
 1999-10-20=HelloWorld
 Billing=Killing
