--- a/playbooks/read-replace-app-token.yaml
+++ b/playbooks/read-replace-app-token.yaml
@@ -23,9 +23,9 @@
       vars:
         regexp: '(?<=\@)(.*?)(?=\@)'
 
-    - name: Print Token Objects
-      debug:
-        var: tokens
+    #- name: Print Token Objects
+    #  debug:
+    #    var: tokens
 
     #- debug:
     #    msg="{{ lookup('ini', '{{item}} type=properties file=/home/LDC/ansible-inventory-check/conf/token.properties') }}"
