--- a/playbooks/read-replace-app-token.yaml
+++ b/playbooks/read-replace-app-token.yaml
@@ -4,9 +4,13 @@
         src: /home/LDC/ansible-inventory-check/conf/{{file}}
         dest: /home/LDC/app/conf/{{file}}
 
-    - name: Reading the file contents on the target machines to a variable
-      slurp:
-        src: /home/LDC/app/conf/{{file}}
+    #- name: Reading the file contents on the target machines to a variable
+    #  slurp:
+    #    src: /home/LDC/app/conf/{{file}}
+    #  register: fileContent
+
+    - debug:
+        var : {{lookup('file', /home/LDC/ansible-inventory-check/conf/{{file}}
       register: fileContent
 
     - name: Decoding the content from base 64 to normal text
