--- a/playbooks/read-replace-app-token.yaml
+++ b/playbooks/read-replace-app-token.yaml
@@ -10,8 +10,11 @@
     #  register: fileContent
 
     - debug:
-        var : {{lookup('file', /home/LDC/ansible-inventory-check/conf/{{file}}
+        msg="{{lookup('file', /home/LDC/ansible-inventory-check/conf/{{file}}"
       register: fileContent
+
+    - debug:
+        var: fileContent.msg
 
     - name: Decoding the content from base 64 to normal text
       set_fact:
