--- a/playbooks/read-replace-app-token.yaml
+++ b/playbooks/read-replace-app-token.yaml
@@ -21,8 +21,8 @@
       set_fact:
         fileString: "{{fileContent.msg}}"
 
-    - debug:
-        var: fileString
+    #- debug:
+    #    var: fileString
 
     #- name: Print the file content on the screen
     #  debug:
